--- a/public/left-bar.css
+++ b/public/left-bar.css
@@ -1,1 +1,126 @@
-ECHO is on.
+.logo {
+	width: 100%;
+	height: 60px;
+	text-align: center;
+}
+
+.logo > img {
+	width: 160px;
+	height: 31px;
+	margin-top: 14px;
+}
+
+.left-bar-wrapper {
+	width: 225px;
+	height: 660px;
+	padding: 0px 12.5px;
+}
+
+.main-button {
+	transition: .2s;
+	width: 100%;
+	height: 43px;
+	background: #3cc843;
+	border: none;
+	border-radius: 4px;
+	border-top: 1px solid #30733e;
+	border-bottom: 3px solid #30733e;
+	font-family: Mon-ExtraBold;
+	color: white;
+	font-size: 12px;
+	letter-spacing: .2px;
+	text-shadow: 0px 0px 8px rgba(0, 0, 0, 0.22);
+}
+
+.main-button:hover{
+	transition: .2s;
+	border-bottom: 1px solid #30733e;
+}
+
+.main-button > img {
+	padding-right: 4px;
+}
+
+.side-bar-line {
+	width: 100%;
+	height: 1px;
+	border: none;
+	background: #2f3945;
+	margin-top: 14px;
+}
+
+.side-navigation {
+	width: 100%;
+	height: auto;
+	padding-top: 14px;
+}
+
+.side-navigation > .nav-button {
+	display: inline-block;
+}
+
+.side-navigation > .active {
+	border: 1px solid #3b4550;
+	background: #27313b;
+	border-radius: 4px;
+	background-image: url(images/nav/active-bg.png);
+	border-right: none;
+	-webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.14);
+	-moz-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.14);
+	box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.14);
+}
+
+.side-navigation > .active > .nav-b-title {
+	font-size: 13px;
+	color: white;
+}
+
+.side-navigation > .active > .nav-b-img {
+	margin-top: 3px;
+}
+
+.nav-button {
+	width: 100%;
+	height: 43px;
+	margin-top: 5px;
+}
+
+.nav-b-img {
+	width: 53px;
+	height: 100%;
+	float: left;
+	text-align: center;
+}
+
+.nav-b-img > img {
+	margin-top: 11px;
+	cursor: pointer;
+}
+
+.nav-b-title {
+	width: 172px;
+	height: 100%;
+	float: left;
+	text-align: left;
+	line-height: 43px;
+}
+
+.nav-b-title {
+	font-family: Mon-SemiBold;
+	font-size: 12px;
+	color: #495561;
+	cursor: pointer;
+}
+
+.non-active {
+	transition: .2s;
+}
+
+.non-active:hover {
+	transition: .2s;
+	margin-left: 8px;
+}
+
+.freinds {
+	background: #27303b;
+}
