--- a/public/page.css
+++ b/public/page.css
@@ -1,1 +1,35 @@
-ECHO is on.
+.page-wrapper {
+	width: 1280px;
+	height: auto;
+	min-height: 720px;
+	margin: 0 auto;
+}
+
+.left-bar {
+	width: 250px;
+	height: 720px;
+	background: #242d37;
+	border-right: 1px solid #2a333d;
+	float: left;
+}
+
+.main-view {
+	width: 1029px;
+	height: auto;
+	min-height: 720px;
+	float: left;
+}
+
+.header {
+	width: 100%;
+	height: 60px;
+	background: #242d37;
+	border-bottom: 1px solid #2a333d;
+}
+
+.content-wrapper {
+	width: 990px;
+	height: 390px;
+	padding: 0px 20px;
+	float: left;
+}
