--- a/public/play.css
+++ b/public/play.css
@@ -184,6 +184,8 @@ letter-spacing: .4px; }
 	float: left;
 	background: #222b35;
 	margin-top: 14px;
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .live-box-title {
@@ -213,4 +215,91 @@ letter-spacing: .4px; }
 	font-size: 10px;
 	color: #c17810;
 	font-family: Mon-Bold;
+}
+
+.live-box-sec {
+	margin-left: 5px;
+}
+
+.live-big-text {
+	font-family: Mon-ExtraBold;
+	font-size: 48px;
+	color: #ffffff;
+	margin-top: 8px;
+	float: left;
+}
+
+.live-small-text {
+	font-family: Mon-ExtraBold;
+	font-size: 14px;
+	color: #ffffff;
+	margin-top: 27px;
+	float: left;
+	margin-left: 15px;
+}
+
+.live-box-third > .live-big-text {
+	letter-spacing: 10px;
+}
+
+.maps-live {
+	width: auto;
+}
+
+.live-box-four > .live-big-text {
+	font-size: 24px;
+	font-family: Mon-SemiBold;
+	letter-spacing: .4px;
+	margin-top: 20px;
+}
+
+.chal-prize-pool {
+	width: 670px;
+	height: auto;
+	padding-left: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	float: left;
+}
+
+.chal-prize-pool > p {
+	font-family: Mon-SemiBold;
+	font-size: 14px;
+	color: #505a65;
+	vertical-align: middle;
+	display: inline-block;
+	padding-top: 5px;
+}
+
+.chal-prize-pool > p > img {
+	vertical-align: middle;
+	display: inline-block;
+	padding-left: 5px;
+}
+
+.chal-prize-pool > p > span {
+	color: #ffffff;
+	font-size: 18px;
+	vertical-align: middle;
+	display: inline-block;
+	padding-left: 5px;
+}
+
+.start-button-wrapper {
+	float: left;
+	width: 100%;
+	height: auto;
+}
+
+.start-button {
+	margin-top: 5px;
+	height: 50px;
+	width: 280px;
+	float: left;
+}
+
+.season-champions {
+	position: absolute;
+	margin-left: 610px;
+	margin-top: 89px;
 }
