--- a/public/season-champions.css
+++ b/public/season-champions.css
@@ -13,7 +13,7 @@
 
 .champions-box {
 	width: 100%;
-	height: 340px;
+	height: 510px;
 	float: left;
 	margin-top: 16px;
 	border-radius: 4px;
@@ -221,4 +221,137 @@
 
 .leader-box > .main-button {
 	height: 40px;
+}
+
+.my-season-stats {
+	width: 280px;
+	height: 235px;
+	float: left;
+	margin-top: 20px;
+	padding-bottom: 20px;
+}
+
+.stats-wrapper {
+	width: 100%;
+	height: 190px;
+	background: #222b35;
+	border-radius: 4px;
+	margin-top: 16px;
+}
+
+.stats-wrapper > .stats-box {
+	background: none;
+	margin-top: 10px;
+}
+
+.stats-wrapper > .stats-box > .stats-right > .stats-top > img {
+	margin-left: 0px;
+}
+
+.stats-wrapper > .stats-box > .stats-right > .stats-bottom > p {
+	margin-left: 0px;
+}
+
+.stats-wrapper > .stats-box-no-mar {
+	margin-top: 0px;
+}
+
+.club-activity {
+	width: 280px;
+	height: 200px;
+	float: left;
+	margin-top: 14px;
+}
+
+.challange-box {
+	width: 100%;
+	height: 68px;
+	border-radius: 4px;
+	background: #222b35;
+	margin-top: 14px;
+}
+
+.challange-box-col-1 {
+	width: 80px;
+	height: 24px;
+	padding: 22px 0px;
+	float: left;
+	background: #29333f;
+	border-top-left-radius: 4px;
+	border-bottom-left-radius: 4px;
+	text-align: center;
+}
+
+.challange-box-col-1 > img {
+	opacity: .4;
+}
+
+.challange-box-col-2 {
+	width: 170px;
+	height: 12px;
+	padding: 26px 15px;
+	float: left;
+}	
+
+.chal-box-title {
+	font-family: Mon-SemiBold;
+	font-size: 14px;
+	color: #697480;
+	float: left;
+}
+
+.chal-box-num {
+	font-family: Mon-Medium;
+	font-size: 14px;
+	color: #ffffff;
+	float: right;
+}
+
+.top-player {
+	width: 255px;
+	height: 44px;
+	padding: 12px 12px;
+	background: #222b35;
+	float: left;
+	margin-top: 4px;
+	border-radius: 4px;
+}
+
+.top-player > img {
+	-webkit-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.14);
+	-moz-box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.14);
+	box-shadow: 0px 0px 9px 1px rgba(0,0,0,0.14);	
+	display: inline-block;
+	vertical-align: middle;
+	float: left;
+}
+
+.top-player-def {
+	display: inline-block;
+	vertical-align: middle;
+	color: #fefefe;
+	font-size: 14px;
+	font-family: Mon-SemiBold;
+	margin-left: 10px;
+	float: left;
+	margin-top: 5px;
+}
+
+.top-player-def > span {
+	font-family: Mon-ExtraBold;
+	font-size: 10px;
+	color: #3cc843;
+}
+
+.top-player-def > span > span {
+	color: #515f6f;
+	font-family: Mon-ExtraBold;
+}
+
+.top-player-score {
+	float: right;
+	line-height: 44px;
+	font-family: Mon-Medium;
+	font-size: 14px;
+	color: #ffffff;
 }
